@@ -105,6 +105,11 @@ Tools/Demos
 - Issue #8867: Fix ``Tools/scripts/serve.py`` to work with files containing
   non-ASCII content.
 
+Tests
+-----
+
+- Issue #8687: provide a test suite for sched.py module.
+
 
 What's New in Python 3.2 Alpha 1?
 =================================
